<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SplitDish</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login_screen">Sign In</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="signin_button">Login</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="stay_logged_in">Keep me logged in</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="sign_in_prompt">Welcome to SplitDish!</string>
    <string name="title_activity_home">SplitDish</string>
    <string name="search_restaurant_name">Search Restaurants</string>
    <string name="action_bar_search">Action Bar Search</string>
    <string name="select_restaurant">Select Your Restaurant:</string>
    <string name="menu_logout">Sign Out</string>
    <string name="test_button">Test</string>
    <string name="start_splitting">Start Splitting</string>
    <string name="order_ahead">Order Ahead</string>
    <string name="title_activity_get_ticket">Get Ticket</string>
    <string name="create_party">Create Party</string>
    <string name="view_dishcard">View DishCard</string>
    <string name="title_activity_lead_or_join">Party</string>
    <string name="title_activity_scan_qr">Scan Receipt</string>
    <string name="lead_party">Create Party</string>
    <string name="join_party">Join Party</string>
    <string name="title_activity_choose_venue">ChooseVenueActivity</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="title_activity_get_ticket_from_scan">GetTicketFromScanActivity</string>
    <string name="title_activity_place_search">PlaceSearchActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_item_selection">Ticket</string>
    <string name="title_activity_check_out">CheckOutActivity</string>
    <string-array name="mock_credit_cards_array">
        <item>Visa: XXXX-4154</item>
        <item>AmEx: XXXX-11421</item>
        <item>Discover: XXXX-1234</item>
        <item>MasterCard: XXXX-9319</item>
    </string-array>

</resources>